--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <nav class="navbar">
 <a href="file:///C:/Users/cassa/OneDrive/Desktop/homepage/index.html" style="--i:0;">Home</a>
 <a href="https://linxmasacre.github.io/about/" style="--i:1;">About</a>
-<a href="file:///C:/Users/cassa/OneDrive/Desktop/modulepage/index.html" style="--i:2;">Module</a></li>
+<a href="https://linxmasacre.github.io/about/ style="--i:2;">Module</a></li>
 <a href="file:///C:/Users/cassa/OneDrive/Desktop/adminpage/index.html" style="--i:3;">Admin</a></li>
 <a href="file:///C:/Users/cassa/OneDrive/Desktop/contactpage/index.html" style="--i:4;">Contact</a></li>
 </nav>
