--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <header class="header">
-<a href="file:///C:/Users/cassa/OneDrive/Desktop/homepage/index.html" class="logo">iLEARN</a>
+<a href="https://linxmasacre.github.io/iLEARN/" class="logo">iLEARN</a>
 
 <input type="checkbox" id="check">
 <label for="check" class="icons">
@@ -21,7 +21,7 @@
 </label>
   
 <nav class="navbar">
-<a href="file:///C:/Users/cassa/OneDrive/Desktop/homepage/index.html" style="--i:0;">Home</a>
+<a href="https://linxmasacre.github.io/iLEARN/" style="--i:0;">Home</a>
 <a href="https://linxmasacre.github.io/about/" style="--i:1;">About</a>
 <a href="https://linxmasacre.github.io/about/ style="--i:2;">Module</a></li>
 <a href="file:///C:/Users/cassa/OneDrive/Desktop/adminpage/index.html" style="--i:3;">Admin</a></li>
